--- a/ContosoUniversity/Web.config
+++ b/ContosoUniversity/Web.config
@@ -126,7 +126,20 @@
         <error statusCode="401" redirect="401.html" />
       </customErrors>
     </system.web>
+  
   </location>
+    <location path="Driver/GetTMWInfoDriver">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+      <customErrors mode="On">
+        <error statusCode="401" redirect="401.html" />
+      </customErrors>
+    </system.web>
+  </location>
+  
+    
   <location path="Sites">
     <system.web>
       <authorization>
